scala and spark start